--- a/src/css/wazi.webflow.css
+++ b/src/css/wazi.webflow.css
@@ -913,7 +913,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 0%;
+  width: 70%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -1646,7 +1646,6 @@ a {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  opacity: 0;
 }
 
 .data-category__title_underline--with-icon {
@@ -2767,7 +2766,7 @@ a {
 
 .point-data__h1--dropdown {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -2810,6 +2809,7 @@ a {
   top: 0%;
   right: 0%;
   bottom: auto;
+  z-index: 1;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -2822,8 +2822,6 @@ a {
 }
 
 .custom-checkbox {
-  position: relative;
-  z-index: 100;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -3247,7 +3245,8 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 12px;
+  margin-top: 24px;
+  padding-top: 12px;
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
@@ -3255,15 +3254,15 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-align-self: flex-start;
-  -ms-flex-item-align: start;
-  align-self: flex-start;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  align-self: stretch;
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
+  border-top: 1px dashed #e6e6e6;
   border-radius: 2px;
-  font-size: 1em;
 }
 
 .point-data__trigger_close {
@@ -3756,10 +3755,9 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  max-width: 260px;
   min-height: 32px;
   min-width: 100px;
-  padding: 12px 8px 6px;
+  padding: 12px 10px 8px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -3779,14 +3777,13 @@ a {
   border-radius: 4px;
   background-color: #fff;
   box-shadow: 0 2px 8px -4px rgba(0, 0, 0, 0.5);
-  font-size: 0.85em;
   font-weight: 500;
 }
 
 .map-tooltip__notch {
   position: absolute;
-  left: 50%;
-  right: 50%;
+  left: auto;
+  right: auto;
   bottom: -7px;
   z-index: 0;
   width: 12px;
@@ -3897,9 +3894,18 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  max-width: 280px;
+  padding-right: 16px;
+  padding-left: 16px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-align-self: stretch;
   -ms-flex-item-align: stretch;
   align-self: stretch;
+  font-size: 0.85em;
+  line-height: 130%;
   font-weight: 700;
 }
 
@@ -3908,16 +3914,21 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 4px;
-  padding-top: 4px;
+  max-width: 280px;
+  margin-top: 6px;
+  padding-top: 6px;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  -webkit-align-self: stretch;
-  -ms-flex-item-align: stretch;
-  align-self: stretch;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
   border-top: 1px solid #e6e6e6;
+  font-size: 0.8em;
+  line-height: 150%;
+  font-weight: 500;
 }
 
 .tooltip__value_label {
@@ -3926,10 +3937,6 @@ a {
   display: -ms-flexbox;
   display: flex;
   margin-right: 16px;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
 }
 
 .tooltip__value_amount {
@@ -4142,8 +4149,8 @@ a {
 
 .map__tooltip_geography-chip {
   position: absolute;
-  left: 7px;
-  top: -6px;
+  left: auto;
+  top: -8px;
   right: auto;
   bottom: auto;
   display: -webkit-box;
@@ -4254,7 +4261,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 25%;
+  width: 50%;
   height: 300px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
@@ -5498,6 +5505,10 @@ a {
   flex: 1;
 }
 
+.styles {
+  display: none;
+}
+
 .styles.hide {
   position: relative;
   z-index: 9999;
@@ -5554,6 +5565,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  margin-bottom: 12px;
 }
 
 .point-data__header_title {
@@ -5569,7 +5581,7 @@ a {
   position: absolute;
   left: auto;
   top: 0%;
-  right: -300px;
+  right: 0px;
   bottom: 0%;
   z-index: 100;
   display: -webkit-box;
@@ -5586,7 +5598,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 24px;
+  margin-bottom: 10px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -5742,6 +5754,8 @@ a {
 }
 
 .map-settings__list-item_checkbox {
+  position: relative;
+  z-index: 1;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -5782,6 +5796,8 @@ a {
 }
 
 .map-settings__list-item_header {
+  position: relative;
+  z-index: 3;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -5789,6 +5805,10 @@ a {
   margin-top: 4px;
   margin-bottom: 4px;
   padding-left: 6px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-align-self: stretch;
   -ms-flex-item-align: stretch;
   align-self: stretch;
@@ -5799,6 +5819,7 @@ a {
 }
 
 .map-settings__list-item_dropdown {
+  z-index: 2;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -5846,7 +5867,7 @@ a {
 }
 
 .icon-2 {
-  margin-right: 16px;
+  margin-right: 12px;
 }
 
 .dropdown-list {
@@ -6416,6 +6437,595 @@ a {
   color: #666;
   font-size: 11px;
   text-transform: uppercase;
+}
+
+.map__tooltip_points {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 280px;
+  margin-top: 6px;
+  padding-top: 4px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  align-self: stretch;
+  border-top: 1px solid #e6e6e6;
+  font-size: 0.8em;
+}
+
+.tooltip__points_label {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 16px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.tooltip__point_item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  border-bottom: 1px solid #ebebeb;
+  font-size: 0.85em;
+  line-height: 170%;
+  font-weight: 500;
+}
+
+.tooltip__point_item.last {
+  border-bottom-style: none;
+}
+
+.styles__map_point-cluster {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 24px;
+  margin-left: 24px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.map__point-cluster {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 34px;
+  height: 34px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border: 2px solid transparent;
+  border-radius: 100px;
+  background-color: rgba(131, 131, 131, 0.6);
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+  font-size: 0.7em;
+  line-height: 110%;
+  text-align: center;
+  letter-spacing: -0.02em;
+  cursor: pointer;
+}
+
+.map__point-cluster._1 {
+  background-color: rgba(110, 204, 57, 0.6);
+  color: #000;
+}
+
+.map__point-cluster._1:hover {
+  border-style: solid;
+  border-width: 2px;
+  border-color: #6ecc39;
+}
+
+.map__point-cluster._2 {
+  background-color: rgba(240, 194, 12, 0.6);
+  color: #000;
+}
+
+.map__point-cluster._2:hover {
+  border-style: solid;
+  border-width: 2px;
+  border-color: #f0c20c;
+}
+
+.map__point-cluster._3 {
+  background-color: rgba(241, 128, 23, 0.6);
+  color: #000;
+}
+
+.map__point-cluster._3:hover {
+  border-style: solid;
+  border-width: 2px;
+  border-color: #f18017;
+}
+
+.map__point-cluster._4 {
+  background-color: rgba(241, 67, 23, 0.6);
+  color: #000;
+}
+
+.map__point-cluster._4:hover {
+  border-style: solid;
+  border-width: 2px;
+  border-color: #f14317;
+}
+
+.map__point-cluster._5 {
+  background-color: rgba(112, 0, 216, 0.6);
+  color: #000;
+}
+
+.map__point-cluster._5:hover {
+  border-style: solid;
+  border-width: 2px;
+  border-color: #7000d8;
+}
+
+.map-cluster--1 {
+  width: 24px;
+  height: 24px;
+  background-color: rgba(110, 204, 57, 0.6);
+}
+
+.map-cluster--2 {
+  width: 24px;
+  height: 24px;
+  background-color: rgba(240, 194, 12, 0.6);
+}
+
+.map-cluster--3 {
+  width: 24px;
+  height: 24px;
+  background-color: rgba(241, 128, 23, 0.6);
+}
+
+.map-cluster--4 {
+  width: 24px;
+  height: 24px;
+  background-color: rgba(241, 67, 23, 0.6);
+}
+
+.map-cluster--5 {
+  width: 24px;
+  height: 24px;
+  background-color: rgba(112, 0, 216, 0.6);
+}
+
+.styles__map_point-clusters {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-image: url('../images/map-bg.png');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.point-data__list-item_wrapper {
+  position: relative;
+  z-index: 2;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  border-radius: 2px;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+  color: #666;
+  font-size: 0.85em;
+  cursor: pointer;
+}
+
+.point-data__list-item_header {
+  position: relative;
+  z-index: 2;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  padding-left: 6px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  align-self: stretch;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  cursor: default;
+}
+
+.more-info {
+  position: relative;
+  width: 20px;
+  border-radius: 100%;
+}
+
+.more-info:hover {
+  color: #303030;
+}
+
+.point-data__list-item_dropdown {
+  z-index: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  align-self: stretch;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+}
+
+.more-info__tooltip--right {
+  position: absolute;
+  left: auto;
+  top: 100%;
+  right: 0%;
+  bottom: 0%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  color: #ccc;
+}
+
+.more-info__tooltip_notch {
+  position: absolute;
+  left: auto;
+  top: 0px;
+  right: 6px;
+  z-index: 0;
+  width: 8px;
+  height: 8px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: #333;
+  box-shadow: 3px 3px 8px -4px rgba(0, 0, 0, 0.5);
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.more-info__tooltip_card {
+  margin-top: 4px;
+  margin-bottom: 0px;
+  padding: 6px 8px;
+  border-radius: 2px;
+  background-color: #303030;
+}
+
+.more-info__tooltip_inner {
+  width: 250px;
+}
+
+.map__cluster-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.map-cluster--1-hover {
+  width: 24px;
+  height: 24px;
+  background-color: #6ecc39;
+}
+
+.map-cluster--2-hover {
+  width: 24px;
+  height: 24px;
+  background-color: #f0c20c;
+}
+
+.map-cluster--3-hover {
+  width: 24px;
+  height: 24px;
+  background-color: #f18017;
+}
+
+.map-cluster--4-hover {
+  width: 24px;
+  height: 24px;
+  background-color: #f14317;
+}
+
+.map-cluster--5-hover {
+  width: 24px;
+  height: 24px;
+  background-color: #7000d8;
+}
+
+.location-header__facilities {
+  margin-top: 16px;
+}
+
+.location-facilities__wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin: -6px;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.facilities__title {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 8px;
+  margin-bottom: 12px;
+  color: #999;
+  font-size: 0.9em;
+  line-height: 140%;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
+
+.location-facility {
+  width: 25%;
+  padding: 6px;
+}
+
+.location-facility__card {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 6px 10px 8px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  border-radius: 2px;
+  background-color: rgba(0, 0, 0, 0.06);
+  -webkit-transition: all 1000ms ease;
+  transition: all 1000ms ease;
+  line-height: 100%;
+}
+
+.location-facility__card:hover {
+  background-color: rgba(0, 0, 0, 0.03);
+}
+
+.location-facility__name {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.location-facility__value {
+  margin-left: 6px;
+}
+
+.location-facility__icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 6px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+}
+
+.location-facility__category {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 0.85em;
+  font-weight: 500;
+}
+
+.location-facility__list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 280px;
+  margin-top: 4px;
+  padding-top: 6px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  align-self: stretch;
+  border-top: 1px solid #ccc;
+  font-size: 0.8em;
+}
+
+.location-facility__item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  border-bottom: 1px solid #e6e6e6;
+  line-height: 170%;
+}
+
+.location-facility__item.last {
+  border-bottom-style: none;
+}
+
+.location-facility__description {
+  margin-top: 6px;
+  padding-top: 6px;
+  border-top: 1px dashed #ccc;
+  color: #999;
+  font-size: 0.8em;
+  line-height: 130%;
+}
+
+._1 {
+  color: #3a70ff;
+}
+
+._2 {
+  color: #993aff;
+}
+
+._3 {
+  color: #f04f4f;
+}
+
+._4 {
+  color: #48c555;
+}
+
+._5 {
+  color: #ad356d;
+}
+
+._6 {
+  color: #ff893a;
+}
+
+._7 {
+  color: #2ccaad;
+}
+
+._8 {
+  color: #ff3a8c;
+}
+
+._9 {
+  color: #0a8286;
+}
+
+._10 {
+  color: #e7bc20;
+}
+
+.styles__icon-colours {
+  overflow: hidden;
+  height: 0px;
 }
 
 @media screen and (max-width: 991px) {
