--- a/src/css/wazimap-ng.webflow.css
+++ b/src/css/wazimap-ng.webflow.css
@@ -7200,6 +7200,7 @@ label {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  z-index: 999;
 }
 
 .map-point-legend.hidden {
@@ -7358,6 +7359,7 @@ label {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  z-index: 999;
 }
 
 .map-bottom-items.hidden {
@@ -7516,6 +7518,7 @@ label {
 
 .profile-indicator__table_content {
   max-height: 300px;
+  overflow: hidden;
 }
 
 .div-block {
@@ -12839,4 +12842,3 @@ label {
     grid-column-start: 1;
   }
 }
-
