--- a/src/css/wazimap-ng.webflow.css
+++ b/src/css/wazimap-ng.webflow.css
@@ -1533,6 +1533,7 @@ label {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   height: 36px;
   padding: 6px 6px 6px 12px;
   -webkit-box-align: center;
@@ -1643,6 +1644,7 @@ label {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  overflow: hidden;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -8705,6 +8707,7 @@ label {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  max-width: 48%;
   margin-right: 10px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -8743,6 +8746,7 @@ label {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -9936,41 +9940,6 @@ label {
 }
 
 #w-node-d59f773f-aa49-25bd-47c6-0df91218fa61-3a8133c8 {
-  -ms-grid-row: span 1;
-  grid-row-start: span 1;
-  -ms-grid-row-span: 1;
-  grid-row-end: span 1;
-  -ms-grid-column: span 1;
-  grid-column-start: span 1;
-  -ms-grid-column-span: 1;
-  grid-column-end: span 1;
-  -ms-grid-column-align: end;
-  justify-self: end;
-}
-
-#w-node-ff6bef03-2df4-3fa9-ffeb-855d80851ab6-3a8133c8 {
-  -ms-grid-row: 3;
-  grid-row-start: 3;
-  -ms-grid-row-span: 1;
-  grid-row-end: 4;
-  -ms-grid-column: 1;
-  grid-column-start: 1;
-  -ms-grid-column-span: 4;
-  grid-column-end: 5;
-}
-
-#w-node-ff6bef03-2df4-3fa9-ffeb-855d80851ab7-3a8133c8 {
-  -ms-grid-row: span 1;
-  grid-row-start: span 1;
-  -ms-grid-row-span: 1;
-  grid-row-end: span 1;
-  -ms-grid-column: span 1;
-  grid-column-start: span 1;
-  -ms-grid-column-span: 1;
-  grid-column-end: span 1;
-}
-
-#w-node-ff6bef03-2df4-3fa9-ffeb-855d80851abb-3a8133c8 {
   -ms-grid-row: span 1;
   grid-row-start: span 1;
   -ms-grid-row-span: 1;
